fix: Final fix number 2. Made spacings even less for 375px phones.

--- a/src/css/Registration.css
+++ b/src/css/Registration.css
@@ -198,8 +198,8 @@ body {
 @media (max-width: 375px) {
     .registration h1 {
         margin: 0;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     }
 
     .registration_input h2 {
